# Acta

./: .gitignore  CHANGELOG.md  README.md  roadmap.md
benchmarks/: README.md  encoding_study.py
benchmarks/0_taxi_data/: README.md
benchmarks/0_taxi_data/results/: nyc_taxi_262144.md  nyc_taxi_4096.json  nyc_taxi_65536.json
benchmarks/1_tpch_lineitem/: README.md  benchmark.py
benchmarks/1_tpch_lineitem/results/: summary.md
benchmarks/results/: nyc_taxi_262144.json  nyc_taxi_262144.md  nyc_taxi_4096.json  nyc_taxi_4096.md  nyc_taxi_65536.json  nyc_taxi_65536.md  summary.md
benchmarks/v0.1/: README.md  summary.md
benchmarks/v0.1/0_taxi_data/: encoding_study.py
benchmarks/v0.1/0_taxi_data/results/: nyc_taxi_262144.json  nyc_taxi_4096.md  nyc_taxi_65536.md  raw_parquet_comparison.json  summary.md
benchmarks/v0.1/1_tpch_lineitem/results/: tpch_sf1_lineitem.json
case_study/: README.md  arrow_ipc.md  csv.md  json_lines.md  parquet.md  sqlite.md  timeseries_database.md
python/: README.md  pyproject.toml
python/src/acta/: __init__.py  columns.py  constants.py  decode.py  encode.py  enums.py  errors.py  framing.py  reader.py  recovery.py  schema.py  transforms.py  writer.py
python/tests/: conftest.py  test_concurrency.py  test_corruption.py  test_decode_fixtures.py  test_encode_fixtures.py  test_framing.py  test_reader.py  test_roundtrip.py  test_schema.py  test_transforms.py
spec/v0/: format_probe.py  format_v0.md
spec/v0.1/: format_probe.py  format_v0.1.md
spec/v0.1/fixtures/: README.md  minimal.acta  minimal.md
spec/v0/fixtures/: README.md
(+11 files in other folders)
